[update] update to v0.2.42
